improved example notebooks

--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee1679d7",
+   "id": "e3cf0883",
    "metadata": {},
    "source": [
     "# Multi-Solution Generation: Using SymK in the Unified Planning Library"
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e78bc4",
+   "id": "7b6ae544",
    "metadata": {},
    "source": [
     "## A simple example\n",
     "\n",
-    "We use the iconic gripper domain, where the goal is to move balls from room A to room B with a gripper that has two arms, which we read in as pddl files."
+    "We use the iconic problem number one of the gripper domain, where the goal is to move four balls from room A to room B with a gripper that has two arms, which we read in as pddl files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "db40758b",
    "metadata": {},
    "outputs": [],
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b2ba86",
+   "id": "7ab964b3",
    "metadata": {},
    "source": [
-    "## Validatior\n",
+    "## Validator\n",
     "We define two functions that serve as helper functions to evaluate the found plans and calculate the cost of the plans."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb32d7fc",
+   "execution_count": 3,
+   "id": "9f025ef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edeba1e7",
+   "id": "fb03e2ef",
    "metadata": {},
    "source": [
     "## Finding a single optimal solution\n",
-    "We solve our gripper problem optimally with SymK."
+    "We solve our gripper problem optimally with ``symk-opt``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "23a8eefa",
    "metadata": {},
    "outputs": [
@@ -96,8 +96,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_79998/3546280737.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
+      "\u001b[0m\u001b[96m  *** Credits ***\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_82575/3760042191.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -118,27 +119,30 @@
     }
    ],
    "source": [
-    "with OneshotPlanner(name='symk') as planner:\n",
+    "with OneshotPlanner(name='symk-opt') as planner:\n",
     "    result = planner.solve(pddl_problem) # output_stream=sys.stdout\n",
     "    if result.status in unified_planning.engines.results.POSITIVE_OUTCOMES:\n",
     "        cost = get_plan_cost(pddl_problem, result.plan)\n",
     "        print(f\"{planner.name} found this plan: {result.plan} with cost {cost}.\")\n",
     "    else:\n",
-    "        print(\"No plan found.\")"
+    "        print(\"No plan found.\")\n",
+    "        \n",
+    "# We do not want to see the credits again and again, so let's disable them from now on.\n",
+    "up.shortcuts.get_environment().credits_stream = None"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4fbbd43c",
+   "id": "466266be",
    "metadata": {},
    "source": [
-    "## Finding multiple optimal solution\n",
-    "We solve our gripper problem with SymK and ask for three optimal solutions, which are reported."
+    "## Finding multiple optimal solutions\n",
+    "We solve our gripper problem with ``symk-opt`` and ask for three optimal solutions, which are reported."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8d28bee7",
    "metadata": {},
    "outputs": [
@@ -146,13 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 3 of `/tmp/ipykernel_79998/1171804862.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
-      "\u001b[0m\u001b[96m  * Engine name: SymK\n",
-      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
-      "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
-      "\u001b[0m\u001b[96m\n",
-      "\u001b[0mPlan 1: SequentialPlan:\n",
+      "Plan 1: SequentialPlan:\n",
       "    pick(ball2, rooma, right)\n",
       "    pick(ball1, rooma, left)\n",
       "    move(rooma, roomb)\n",
@@ -213,16 +211,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc495cb",
+   "id": "a49bd090",
    "metadata": {},
    "source": [
-    "## Finding all optimal solution\n",
-    "We find all optimal solutions using SymK. We report the number of existing optimal plans and their cost."
+    "## Finding all optimal solutions\n",
+    "We find all optimal solutions (using ``symk-opt``) and report the number of existing optimal plans and their cost."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "69c01782",
    "metadata": {},
    "outputs": [
@@ -230,13 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79998/198799663.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
-      "\u001b[0m\u001b[96m  * Engine name: SymK\n",
-      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
-      "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
-      "\u001b[0m\u001b[96m\n",
-      "\u001b[0mSymK (with optimality guarantee)\n",
+      "SymK (with optimality guarantee)\n",
       "SymK (with optimality guarantee) found 100 plans...\n",
       "SymK (with optimality guarantee) found 200 plans...\n",
       "SymK (with optimality guarantee) found 300 plans...\n",
@@ -249,8 +241,6 @@
     }
    ],
    "source": [
-    "# Query an anytime planner with OPTIMAL_PLANS guarantee and generate all optimal plans => SymK\n",
-    "\n",
     "plans = []\n",
     "\n",
     "with AnytimePlanner(problem_kind=pddl_problem.kind, anytime_guarantee=\"OPTIMAL_PLANS\") as planner:\n",
@@ -275,16 +265,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68b9240a",
+   "id": "6c175250",
    "metadata": {},
    "source": [
     "## Find multiple solutions ordered by cost\n",
-    "Again, we solve our gripper problem and ask for 500 plans, from which 384 plans are optimal with cost 11 and the remaining 116 of"
+    "Again, we solve our gripper problem and ask this time for 500 plans, of which 384 plans are optimal with cost 11 and the remaining 116 of the 500 plans have cost 12."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "253b5799",
    "metadata": {},
    "outputs": [
@@ -292,13 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 4 of `/tmp/ipykernel_79998/2464694441.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
-      "\u001b[0m\u001b[96m  * Engine name: SymK\n",
-      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
-      "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
-      "\u001b[0m\u001b[96m\n",
-      "\u001b[0mSymK found 100 plans...\n",
+      "SymK found 100 plans...\n",
       "SymK found 200 plans...\n",
       "SymK found 300 plans...\n",
       "SymK found 400 plans...\n",
