--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -98,12 +98,12 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_82575/3760042191.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_107084/3917870263.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
-      "\u001b[0mSymK found this plan: SequentialPlan:\n",
+      "\u001b[0mSymK (with optimality guarantee) found this plan: SequentialPlan:\n",
       "    pick(ball2, rooma, right)\n",
       "    pick(ball1, rooma, left)\n",
       "    move(rooma, roomb)\n",
@@ -268,8 +268,8 @@
    "id": "6c175250",
    "metadata": {},
    "source": [
-    "## Find multiple solutions ordered by cost\n",
-    "Again, we solve our gripper problem and ask this time for 500 plans, of which 384 plans are optimal with cost 11 and the remaining 116 of the 500 plans have cost 12."
+    "## Finding multiple solutions ordered by cost\n",
+    "Again, we solve our grab problem and this time we ask for 500 plans, of which 384 plans are optimal with cost 11 and the remaining 116 of the 500 plans have cost 12."
    ]
   },
   {
