updated notebooks and readme

--- a/notebooks/axioms_usage.ipynb
+++ b/notebooks/axioms_usage.ipynb
@@ -8,18 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import unified_planning as up\n",
-    "import up_symk, up_fast_downward\n",
-    "from unified_planning.shortcuts import *\n",
-    "from unified_planning.io import PDDLWriter, PDDLReader"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,13 +19,46 @@
     "\n",
     "The following code is a function that provides the functionality to model the Sokoban planning problem/instance shown below with and without axioms using the Unified Planning Library.\n",
     "\n",
-    "![Image Alt Text](KSokoban-screenshot.png)\n",
+    "![KSokoban-screenshot](https://raw.githubusercontent.com/speckdavid/up-symk/d720193610a213b02112c41ba1b1f22292e17825/notebooks/KSokoban-screenshot.png)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use the unified planning library and SymK, it is necessary to install them. Unfortunately, the integration of the axiom and derived predicate is not yet merged into the main library. For now, we recommend building the extended version of the [unified planning library](https://github.com/speckdavid/unified-planning) locally and then installing the 'up-symk' package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install --pre unified-planning\n",
+    "!git clone https://github.com/speckdavid/unified-planning\n",
+    "!pip install unified-planning/\n",
+    "\n",
+    "!pip install up-symk\n",
+    "!pip install up-fast-downward"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unified_planning as up\n",
+    "import up_symk, up_fast_downward\n",
+    "from unified_planning.shortcuts import *\n",
+    "from unified_planning.io import PDDLWriter, PDDLReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +218,7 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 4 of `/tmp/ipykernel_22559/1694764868.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 4 of `/tmp/ipykernel_24924/1694764868.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: Fast Downward\n",
       "  * Developers:  Uni Basel team and contributors (cf. https://github.com/aibasel/downward/blob/main/README.md)\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mFast Downward is a domain-independent classical planning system.\u001b[0m\u001b[96m\n",
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +309,7 @@
       "   body = [(not has_box(to)), Exists (location from) (can_reach(from) and adjacent(from, to))]\n",
       "  }\n",
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 7 of `/tmp/ipykernel_22559/1322755656.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 7 of `/tmp/ipykernel_24924/1322755656.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -337,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +409,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aiplan4eu3.10",
+   "display_name": "test-plan4eu",
    "language": "python",
-   "name": "aiplan4eu3.10"
+   "name": "test-plan4eu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
