--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -9,8 +9,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b6ae544",
+   "metadata": {},
+   "source": [
+    "## A simple example\n",
+    "\n",
+    "We use the iconic problem number one of the gripper domain, where the goal is to move four balls from room A to room B with a gripper that has two arms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb12ab8",
+   "metadata": {},
+   "source": [
+    "To utilize the unified-planning library and SymK, it is necessary to install them."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "2dcec7e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install --pre unified-planning\n",
+    "!pip install up-symk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "54204a66",
    "metadata": {},
    "outputs": [],
@@ -26,17 +57,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b6ae544",
+   "id": "fbf3f019",
    "metadata": {},
    "source": [
-    "## A simple example\n",
-    "\n",
-    "We use the iconic problem number one of the gripper domain, where the goal is to move four balls from room A to room B with a gripper that has two arms, which we read in as pddl files."
+    "## Domain and Problem Files\n",
+    "We need to download the domain and problem files described in PDDL for the planning task we aim to solve. Following this, we read and use these files to create a PDDL problem, setting the quality metric to minimize the plan length."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "62b37615",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2023-11-02 13:40:33--  https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-domain.pddl\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 898 [text/plain]\n",
+      "Saving to: ‘gripper-domain.pddl.1’\n",
+      "\n",
+      "gripper-domain.pddl 100%[===================>]     898  --.-KB/s    in 0s      \n",
+      "\n",
+      "2023-11-02 13:40:34 (93,1 MB/s) - ‘gripper-domain.pddl.1’ saved [898/898]\n",
+      "\n",
+      "--2023-11-02 13:40:34--  https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-prob01.pddl\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 626 [text/plain]\n",
+      "Saving to: ‘gripper-prob01.pddl.1’\n",
+      "\n",
+      "gripper-prob01.pddl 100%[===================>]     626  --.-KB/s    in 0s      \n",
+      "\n",
+      "2023-11-02 13:40:34 (28,7 MB/s) - ‘gripper-prob01.pddl.1’ saved [626/626]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-domain.pddl\n",
+    "!wget https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-prob01.pddl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "db40758b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9f025ef9",
    "metadata": {},
    "outputs": [],
@@ -88,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "23a8eefa",
    "metadata": {},
    "outputs": [
@@ -98,7 +168,7 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_79014/3917870263.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_20726/3917870263.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -142,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8d28bee7",
    "metadata": {},
    "outputs": [
@@ -151,43 +221,43 @@
      "output_type": "stream",
      "text": [
       "Plan 1: SequentialPlan:\n",
-      "    pick(ball2, rooma, right)\n",
-      "    pick(ball1, rooma, left)\n",
+      "    pick(ball3, rooma, right)\n",
+      "    pick(ball2, rooma, left)\n",
       "    move(rooma, roomb)\n",
-      "    drop(ball2, roomb, right)\n",
-      "    drop(ball1, roomb, left)\n",
+      "    drop(ball3, roomb, right)\n",
+      "    drop(ball2, roomb, left)\n",
       "    move(roomb, rooma)\n",
-      "    pick(ball3, rooma, left)\n",
+      "    pick(ball1, rooma, left)\n",
       "    pick(ball4, rooma, right)\n",
       "    move(rooma, roomb)\n",
-      "    drop(ball3, roomb, left)\n",
+      "    drop(ball1, roomb, left)\n",
       "    drop(ball4, roomb, right) with cost 11.\n",
       "\n",
       "Plan 2: SequentialPlan:\n",
-      "    pick(ball2, rooma, right)\n",
-      "    pick(ball1, rooma, left)\n",
+      "    pick(ball3, rooma, right)\n",
+      "    pick(ball2, rooma, left)\n",
       "    move(rooma, roomb)\n",
-      "    drop(ball2, roomb, right)\n",
-      "    drop(ball1, roomb, left)\n",
+      "    drop(ball3, roomb, right)\n",
+      "    drop(ball2, roomb, left)\n",
       "    move(roomb, rooma)\n",
-      "    pick(ball3, rooma, left)\n",
+      "    pick(ball1, rooma, left)\n",
       "    pick(ball4, rooma, right)\n",
       "    move(rooma, roomb)\n",
       "    drop(ball4, roomb, right)\n",
-      "    drop(ball3, roomb, left) with cost 11.\n",
+      "    drop(ball1, roomb, left) with cost 11.\n",
       "\n",
       "Plan 3: SequentialPlan:\n",
-      "    pick(ball2, rooma, right)\n",
-      "    pick(ball1, rooma, left)\n",
-      "    move(rooma, roomb)\n",
-      "    drop(ball2, roomb, right)\n",
-      "    drop(ball1, roomb, left)\n",
-      "    move(roomb, rooma)\n",
+      "    pick(ball2, rooma, left)\n",
       "    pick(ball3, rooma, right)\n",
-      "    pick(ball4, rooma, left)\n",
       "    move(rooma, roomb)\n",
       "    drop(ball3, roomb, right)\n",
-      "    drop(ball4, roomb, left) with cost 11.\n",
+      "    drop(ball2, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    pick(ball4, rooma, right)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    drop(ball4, roomb, right) with cost 11.\n",
       "\n",
       "SymK (with optimality guarantee) found 3 optimal plans with cost 11.\n"
      ]
@@ -220,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "69c01782",
    "metadata": {},
    "outputs": [
@@ -274,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "253b5799",
    "metadata": {},
    "outputs": [
@@ -321,9 +391,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "test-plan4eu",
    "language": "python",
-   "name": "python3"
+   "name": "test-plan4eu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
