set default number of plans to 1

--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "54204a66",
    "metadata": {},
    "outputs": [],
@@ -66,39 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "62b37615",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2023-11-02 13:40:33--  https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-domain.pddl\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 898 [text/plain]\n",
-      "Saving to: ‘gripper-domain.pddl.1’\n",
-      "\n",
-      "gripper-domain.pddl 100%[===================>]     898  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-11-02 13:40:34 (93,1 MB/s) - ‘gripper-domain.pddl.1’ saved [898/898]\n",
-      "\n",
-      "--2023-11-02 13:40:34--  https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-prob01.pddl\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 626 [text/plain]\n",
-      "Saving to: ‘gripper-prob01.pddl.1’\n",
-      "\n",
-      "gripper-prob01.pddl 100%[===================>]     626  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-11-02 13:40:34 (28,7 MB/s) - ‘gripper-prob01.pddl.1’ saved [626/626]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-domain.pddl\n",
     "!wget https://raw.githubusercontent.com/speckdavid/up-symk/master/notebooks/gripper-prob01.pddl"
@@ -106,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "db40758b",
    "metadata": {},
    "outputs": [],
@@ -127,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9f025ef9",
    "metadata": {},
    "outputs": [],
@@ -158,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "23a8eefa",
    "metadata": {},
    "outputs": [
@@ -168,7 +139,7 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_20726/3917870263.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 1 of `/tmp/ipykernel_39155/3917870263.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -212,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8d28bee7",
    "metadata": {},
    "outputs": [
@@ -285,12 +256,12 @@
    "metadata": {},
    "source": [
     "## Finding all optimal solutions\n",
-    "We find all optimal solutions (using ``symk-opt``) and report the number of existing optimal plans and their cost."
+    "We find all optimal solutions (using ``symk-opt``) and report the number of existing optimal plans and their cost. Note that by default the number of schedules generated in Anytime mode is 1, so you need to specify the number (None sets it to infinite)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "69c01782",
    "metadata": {},
    "outputs": [
@@ -313,7 +284,8 @@
    "source": [
     "plans = []\n",
     "\n",
-    "with AnytimePlanner(problem_kind=pddl_problem.kind, anytime_guarantee=\"OPTIMAL_PLANS\") as planner:\n",
+    "with AnytimePlanner(problem_kind=pddl_problem.kind, anytime_guarantee=\"OPTIMAL_PLANS\", \n",
+    "                    params={\"number_of_plans\": None}) as planner:\n",
     "    print(planner.name)\n",
     "    for i, result in enumerate(planner.get_solutions(pddl_problem)): # output_stream=sys.stdout): \n",
     "        if result.status == up.engines.PlanGenerationResultStatus.INTERMEDIATE:\n",
@@ -344,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "253b5799",
    "metadata": {},
    "outputs": [
@@ -391,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test-plan4eu",
+   "display_name": "eubug",
    "language": "python",
-   "name": "test-plan4eu"
+   "name": "eubug"
   },
   "language_info": {
    "codemirror_mode": {
@@ -405,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
